 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.6 Changelog

6.6.0 Beta 7
============
* [DanielPharos]: Fixed a bug where QuArK lost track of game file folders if it failed to load
          - one of the files in it, causing missing textures and shaders, and a memory leak.

* [DanielPharos]: Fixed the bad PAK file output, which was broken in 6.6.0 Beta 2.

* [DanielPharos]: Fixed the errors and value corruption when trying to re-open the
          - "Background Image" window.

* [DanielPharos]: Changes to get VMT files working again under the new Steam file layout.

* [DanielPharos]: Fixed DLL hijacking vulnerability on Windows XP SP1 and later.

* [DanielPharos]: Added support for new Steam game file layout (using the 'common' directory).

* [DanielPharos]: Added brushDef2 and brushDef3 saving support.

* [DanielPharos]: Many fixes for .m32 texture saving. It will now produce something that at least
          - has a chance of working...

* [DanielPharos]: Generate proper error if something went wrong trying to save files, instead of
          - always displaying a message about "save" not being supported.

* [DanielPharos]: Workaround for another unexpected Windows Registry key or value problem in the
          - video hardware enumeration.

* [DanielPharos]: Fixed a long-standing bug that could cause a runtime error on startup when
          - enumerating the video hardware and display settings.

* [DanielPharos]: Added detection of corrupt AMD driver registry key.

* [DanielPharos]: Added the GDI workaround to OpenGL. This fixes the drawing of GDI on OpenGL views
          - on more modern Windows machines.
