@@ -1043,6 +1043,7 @@ Strings = {
     5786: "Object %s is being created in a non-allowed parent! This might produce errors!",
     5787: "RMF: String longer than 128 characters. This will overflow most other editors!",
     5788: "Unable to load a game file: %s",
+    5789: "Invalid offical pak filename: %s",
 
     # DanielPharos would like to reserve 6000 .. 6099 for all renderers
     6000: "Unable to create SceneObject//%s",
@@ -1138,6 +1139,9 @@ Strings = {
 
 # ----------- REVISION HISTORY ------------
 #$Log$
+#Revision 1.180  2017/10/01 09:15:15  danielpharos
+#Added warning on failure to load game file to all other places too.
+#
 #Revision 1.179  2017/10/01 08:24:50  danielpharos
 #Added logging when failing to load a game file (texture or shader).
 #
